# RISC-V-Emulator

./: .gitignore  ASCII_ART.txt  CMakeLists.txt  DIAGRAM.txt  DIAGRAM_1.txt  DIAGRAM_2.txt  Parser.cpp  Parser.h  README.md  Register.h  State.h  State.hpp  _in.parse  commands_impl.h  consts.h  consts.hpp  create_makefile.py  example.sh  in.asm  in.txt  main.cpp  run.sh  run_tests.py  test.cpp
UI/: UI.cpp  UI.hpp  padding.cpp  padding.hpp
break_controller/: BreakController.cpp  BreakController.hpp
commands/: Add.cpp  Command.h  Command.hpp  Li.cpp  Mv.cpp  commands.h  commands.hpp  commands_impl.cpp
exceptions/: ArgsParsingException.hpp  EmulatorException.hpp  ParserException.hpp  PreprocessorException.hpp  RuntimeException.hpp
frontend/: Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  Preprocessor.cpp  Preprocessor.hpp  StringUtils.hpp
instructions/: Instruction.hpp  instructions.hpp  instructions_impl.cpp
interpreter/: Interpreter.cpp  Interpreter.hpp
parser/: Parser.cpp  Parser.h  Parser.hpp
project_info/: ASCII_ART.txt  DIAGRAM_1.txt  DIAGRAM_2.txt  compile_flags.txt
project_info/code_samples/: correct_example.asm  use_example.txt  wrong_example.asm
tests/: simple_commands_test.cpp  simple_commands_test.h  simple_instructions_test.cpp
tests/breakcontroller_tests/: run_tests.py
tests/examples_test/: in.txt  run_tests.py
tests/interpreter_tests/: interpreter_test.py
tests/macro_tests/: run_tests.py
tests/test_parser/: a.out  run.sh  test_check_syntax.cpp  test_get_immediate 2.cpp  test_get_immediate.cpp  test_get_offset 2.cpp  test_labels.cpp  (+7 more)
(+64 files in other folders)
